# DataGateway

./: .gitignore  README.md  environment.yml  pyproject.toml
DataGateway/: __init__.py  src.py
tests/: test.py
